<resources>
    <string name="disable_qrcode">Disable QRcode</string>
    <string name="enable_qrcode">Enable QRcode</string>
    <string name="disable_led">Disable LED</string>
    <string name="enable_led">Enable LED</string>
    <string name="single_shot">Single Shot</string>
    <string name="loop_scan">Loop Scan</string>
    <string name="timeout">TimeOut</string>
    <string name="letter_case">Letter case</string>
    <string name="output_method">Output method</string>
    <string name="single_barcode">Single Barcode</string>
    <string name="multi_barcode">Multi Barcode</string>
    <string name="normal_scan">Normal Scan</string>
    <string name="precision_1d">Precision 1D</string>
    <string name="no_prefix">No prefix</string>
    <string name="prefix_lt"><![CDATA[Prefix: <]]></string>
    <string name="no_suffix">No suffix</string>
    <string name="suffix_gt"><![CDATA[Suffix: >]]></string>
    <string name="suspend">Suspend</string>
    <string name="resume">Resume</string>
    <string name="scan">Press down to Scan</string>
    <string name="scanloop">Click to start/stop Scan</string>
    <string name="app_name">XCScanner DemoApp</string>
    <string name="aim_always_off">Aimer Off</string>
    <string name="aim_trigger_on">Aimer Trigger On</string>
    <string name="flash_illumonly">Illume Only</string>
    <string name="flash_illumstrobe">Strobe</string>
    <string name="active_license">Active license</string>
    <string name="get_last_image">Get LastImage</string>
</resources>