<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggle_enable_qr"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.3"
                android:textAllCaps="false"
                android:textOff="@string/disable_qrcode"
                android:textOn="@string/enable_qrcode"/>

            <ToggleButton
                android:id="@+id/toggle_indicator"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.3"
                android:textAllCaps="false"
                android:textOff="@string/disable_led"
                android:textOn="@string/enable_led"/>

            <ToggleButton
                android:id="@+id/toggle_loopscan"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.3"
                android:textAllCaps="false"
                android:textOff="@string/single_shot"
                android:textOn="@string/loop_scan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_timeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeout" />

            <Spinner
                android:id="@+id/spin_timeout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter_case" />

            <Spinner
                android:id="@+id/spin_text_case"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_outmethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output_method" />

            <Spinner
                android:id="@+id/spin_output_method"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggle_multibarcodes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.2"
                android:checked="false"
                android:textAllCaps="false"
                android:textOff="@string/single_barcode"
                android:textOn="@string/multi_barcode" />

            <ToggleButton
                android:id="@+id/toggle_precision_1d_scan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.2"
                android:checked="false"
                android:textAllCaps="false"
                android:textOff="@string/normal_scan"
                android:textOn="@string/precision_1d" />

            <ToggleButton
                android:id="@+id/toggle_aim_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.2"
                android:checked="false"
                android:textAllCaps="false"
                android:textOff="@string/aim_always_off"
                android:textOn="@string/aim_trigger_on" />

            <ToggleButton
                android:id="@+id/toggle_flash_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.2"
                android:checked="false"
                android:textAllCaps="false"
                android:textOff="@string/flash_illumonly"
                android:textOn="@string/flash_illumstrobe" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggle_prefix"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textOff="@string/no_prefix"
                android:textOn="@string/prefix_lt"/>

            <ToggleButton
                android:id="@+id/toggle_suffix"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textOff="@string/no_suffix"
                android:textOn="@string/suffix_gt"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textview_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:fadeScrollbars="false"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_suspend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:onClick="onClick"
                android:text="@string/suspend"
                android:textAllCaps="false"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_resume"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:onClick="onClick"
                android:text="@string/resume"
                android:textAllCaps="false"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_active_license"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:onClick="onClick"
                android:text="@string/active_license"
                android:textAllCaps="false"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_get_lastimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:onClick="onClick"
                android:text="@string/get_last_image"
                android:textAllCaps="false"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/button_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:layout_weight="0.1"
            android:textAllCaps="false"
            android:onClick="onClick"
            android:text="@string/scan"
            android:visibility="visible" />

    </LinearLayout>
</RelativeLayout>